--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://10.211.55.3:3306/apsdbnew
+spring.datasource.url=jdbc:mysql://localhost:3306/apsdbnew
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jackson.serialization-inclusion=non_null
