--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jackson.serialization-inclusion=non_null
 
-#spring.jpa.hibernate.ddl-auto: create
+#spring.jpa.hibernate.ddl-auto: update
 spring.jpa.database = MYSQL
-spring.jpa.show-sql = true 
+spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
